capture and export leads stuff

--- a/public/static/landing2.html
+++ b/public/static/landing2.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sign in &middot; Twitter Bootstrap</title>
+    <title>MySaleTable</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -20,24 +20,25 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Facebook_Profile.png" type="image/png">
+    <link rel="icon" href="img/Facebook_Profile.png" type="image/png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
 
 	<script type="text/javascript">
-	//The array which is going to hold the image information. Store the image info along with their correct path; I've omitted the path here as I've stored the images in the same folder where my web page resides.
+	//The array which is going to hold the image information. 
 	var imageArray = new Array();
 
 	imageArray[0] = "img/Landing_Scotch_Dark_Corner.jpg"; //You can replace these image file names with your own image names.
 	imageArray[1] = "img/Landing_Marc.jpg";
-	imageArray[2] = "img/Landing_Sale_Sign_2.jpg";
-	imageArray[3] = "img/Landing_Ralph.jpg";
+	imageArray[2] = "img/Landing_Sale_Sign3.jpg";
+	imageArray[3] = "img/landing_edited_PEC1.jpg";
+	imageArray[4] = "img/Landing_Kate_Spade_edited.jpg";
 	function doIt()
 	{
-	var rand = Math.floor(Math.random()*4); //Generating a random number between 0 and 3 here in your case you can replace 4 with 11 if you have 10 images
+	var rand = Math.floor(Math.random()*5); //Generating a random number between 0 and 3 here in your case you can replace 4 with 11 if you have 10 images
 
 	var imgPath = "<img src='"+imageArray[rand]+"' alt='heder' border='0' align='absmiddle' />";
 
