--- a/public/static/login.html
+++ b/public/static/login.html
@@ -47,13 +47,13 @@
           </a>
 		
 		
-          <a class="brand" href="index.html"><img src="img/Logo_Icon_Small.png" height="34" width="180" /></a>
+          <a class="brand" href="#"><img src="img/Logo_Icon_Small.png" height="34" width="180" /></a>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="fbconnect.html">Join</a></li>
+              <li><a href="signup.html">Join</a></li>
               <li><a class="active" href="login.html">Login</a></li>
-              <li><a href="merchants.html">Merchants</a></li>
+              <li><a href="#">Merchants</a></li>
 			  
             </ul>
           </div><!--/.nav-collapse -->
