--- a/public/static/signup.html
+++ b/public/static/signup.html
@@ -65,25 +65,47 @@
   <body>
 	<center><img src="img/Logo_Icon_Small.png" class="modal-brand" height="34" width="180" /></font></center><br><br>
 
+<script>
+  function registerMe() {
+   $.post('/register_lead', $("#registration").serialize())
+  }
+</script>
+
     <div class="container landing-signin">
       <ul class="nav">
-      <form class="form-signin landing-signin">
+      <form class="form-signin landing-signin" id="registration">
         <center><p><font color="#404040" size="5">Join</font></p></center>
 		<hr>
-        <center><input type="text" class="input-block-level" placeholder="Name"><br>
-        <input type="text" class="input-block-level" placeholder="Email Address"><br>
-        <input type="text" class="input-block-level" placeholder="City, State"><br>
-        <button class="btn btn-large" type="submit">Register</button><br><br>
+        <center><input type="text" name="first_name" class="input-block-level" placeholder="First Name"><br>
+        <input type="text" name="last_name" class="input-block-level" placeholder="Last Name"><br>
+        <input type="text" name="email" class="input-block-level" placeholder="Email"><br>
+        <a href="#submitmodal" data-toggle="modal" onclick="registerMe()">
+          <button class="btn btn-large" type="submit">Register</button></a><br><br>
 		<a href="login.html"><p><font color="#404040" size="5">Already a user? Log in</font></a></center>
 		 </ul>
+		
 
 		 
-		
+		<div id="submitmodal" class="modal hide">
+		  <div class="modal-header">
+		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		    <center><p><font size="5">Success!</font></p></center>
+		  </div>
+		  <div class="modal-body">
+		    <p>We've received your information and will send you an email soon. Be on the look out for your confirmation email.</p>
+		  </div>
+		  <div class="modal-footer">
+		    
+		    <a href="landing2.html" class="btn btn-success">Ok</a>
+		  </div>
+		</div>
 
 
 	
        
     </div> <!-- /container -->
+
+	
 
     <!-- Le javascript
     ================================================== -->
