--- a/public/static/landing2.html
+++ b/public/static/landing2.html
@@ -59,7 +59,7 @@
 			<a href="signup.html" class="button btn-success btn-large"><font color="white">Join Now</font></a>
 			<br><br>
 			<a href="login.html"><p><font size="3" color="white">Already a Member? Log in</font></p></a><br><br>
-			<a href="#"><img src="img/Apple_Icon_PNG.png" width="180px" height="56px"></a>
+			<a href="https://itunes.apple.com/us/app/mysaletable/id594076994?ls=1&mt=8"><img src="img/Apple_Icon_PNG.png" width="180px" height="56px"></a>
 			</div>
 			
 		
