landing page fix

--- a/lib/static_pages/landing.html
+++ b/lib/static_pages/landing.html
@@ -53,9 +53,9 @@
 			<img src="/assets/Logo_Small_White.png" width="400px" height="77px">
 			<p><font size="4" color="white">SHARE PHOTOS OF A SALE IN STORE <br>YOUR FRIENDS SEE IT LIVE<BR>DOWNLOAD THE APP NOW</font></p
 			<br><br><br>
-      <a href="<%= register_url %>" class="button btn-success btn-large"><font color="white">Join Now</font></a>
+      <a href="/register" class="button btn-success btn-large"><font color="white">Join Now</font></a>
 			<br><br>
-      <a href="<%= new_session_url %>"><p><font size="3" color="white">Already a Member? Log in</font></p></a><br><br>
+      <a href="/sessions/new"><p><font size="3" color="white">Already a Member? Log in</font></p></a><br><br>
 			<a href="https://itunes.apple.com/us/app/mysaletable/id594076994?ls=1&mt=8"><img src="/assets/Apple_Icon_PNG.png" width="180px" height="56px"></a>
 			</div>
 			
