new pages stuff

--- a/lib/static_pages/intro.html
+++ b/lib/static_pages/intro.html
@@ -1,14 +1,8 @@
-<style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-</style>
-
 <div class="container">
 	<div class="jumbotron">
 	        <h2 style="font-weight:lighter">We Are a Megaphone for Merchants Sales</h2>
 	        <p class="lead">Verify your business account to become an authoritative poster for your store.</p> <p class="lead">Self-load products, create a branded feed page, and manage inventory.</p>
-          <a class="btn" href="<%= new_merchant_url %>">Add Merchant Account</a>
+          <a class="btn" href="/merchants/new">Add Merchant Account</a>
 	      </div>
 
 	      <hr>
