--- a/lib/static_pages/iphone.html
+++ b/lib/static_pages/iphone.html
@@ -26,13 +26,15 @@
 
   <body>
     <div class="container" align="center">
-		<div style="margin-top:20px">
+		<div style="margin-top:30px">
 		<img src="/assets/Logo_Table.png">
 		<br><br><br>
 		<p><font size="4">We look better on our iPhone app!</font></p>
 		<br><br><br>
-    <a href="/" class="btn btn-large">LATER</a>&#160;&#160;
-    <a href="/download" class="btn btn-success btn-large">GET APP</a>
+    <a href="/" class="btn btn-medium">LATER</a>&#160;&#160;
+    <a href="/download" class="btn btn-success btn-medium">GET APP</a>&#160;&#160;
+    <a href="/" class="btn btn-medium">HAVE IT</a>
+    
 		</div></div>
   </body>
 
