image assets to s3

--- a/lib/static_pages/landing.html
+++ b/lib/static_pages/landing.html
@@ -27,11 +27,11 @@
 	//The array which is going to hold the image information. 
 	var imageArray = new Array();
 
-	imageArray[0] = "/assets/Landing_Scotch_Dark_Corner.jpg"; //You can replace these image file names with your own image names.
-	imageArray[1] = "/assets/Landing_Marc.jpg";
-	imageArray[2] = "/assets/Landing_Sale_Sign3.jpg";
-	imageArray[3] = "/assets/landing_edited_PEC1.jpg";
-	imageArray[4] = "/assets/Landing_Kate_Spade_edited.jpg";
+	imageArray[0] = "http://s3.amazonaws.com/mst-images-shared/Landing_Scotch_Dark_Corner.jpg"; //You can replace these image file names with your own image names.
+	imageArray[1] = "http://s3.amazonaws.com/mst-images-shared/Landing_Marc.jpg";
+	imageArray[2] = "http://s3.amazonaws.com/mst-images-shared/Landing_Sale_Sign3.jpg";
+	imageArray[3] = "http://s3.amazonaws.com/mst-images-shared/landing_edited_PEC1.jpg";
+	imageArray[4] = "http://s3.amazonaws.com/mst-images-shared/Landing_Kate_Spade_edited.jpg";
 	function doIt()
 	{
 	var rand = Math.floor(Math.random()*5); //Generating a random number between 0 and 3 here in your case you can replace 4 with 11 if you have 10 images
