remove links to bootstrap.min.js

--- a/lib/static_pages/landing.html
+++ b/lib/static_pages/landing.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <script src="/assets/jquery.js"></script>
-    <script src="/assets/bootstrap.min.js"></script>
+    <script src="/assets/bootstrap.js"></script>
 	
 	<!-- Le styles -->
     <link href="/assets/bootstrap.css" rel="stylesheet">
@@ -61,13 +61,6 @@
 			
 		
 		
-		</body>
-		 <!-- Le javascript
-		    ================================================== -->
-		    <!-- Placed at the end of the document so the pages load faster -->
-		    <script src="/assets/jquery.js"></script>
-		    <script src="/assets/bootstrap.min.js"></script>
-
 		  </body>
 		</html>
 
