--- a/lib/static_pages/iphone.html
+++ b/lib/static_pages/iphone.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <script src="/assets/jquery.js"></script>
-    <script src="/assets/bootstrap.min.js"></script>
+    <script src="/assets/bootstrap.js"></script>
 	
 	<!-- Le styles -->
     <link href="/assets/bootstrap.css" rel="stylesheet">
