--- a/lib/static_pages/landing.html
+++ b/lib/static_pages/landing.html
@@ -50,8 +50,8 @@
 		doIt();
 		</script></div>
 		<div class="landing-logo">
-			<img src="/assets/Logo_Small_White.png" width="400px" height="77px">
-			<p><font size="4" color="white">SHARE PHOTOS OF A SALE IN STORE <br>YOUR FRIENDS SEE IT LIVE<BR>DOWNLOAD THE APP NOW</font></p
+			<img src="http://s3.amazonaws.com/mst-images-shared/Logo_Small_White.png" width="400px" height="77px">
+			<p><font size="4" color="white" class="landing-text">SHOP SALE TABLES IN STORES EVERYWHERE </font></p>
 			<br><br><br>
       <a href="/register" class="button btn-success btn-large"><font color="white">Join Now</font></a>
 			<br><br>
