--- a/public/500.html
+++ b/public/500.html
@@ -19,6 +19,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
+    yayo
     <h1>We're sorry, but something went wrong.</h1>
   </div>
 </body>
