Adding Variables to Sales

--- a/lib/static_pages/photo-tips.html
+++ b/lib/static_pages/photo-tips.html
@@ -5,10 +5,11 @@
         <div class="well sidebar-nav">
           <ul class="nav nav-list">
             <li class="nav-header">Helpful Stuff</li>
-            <li class="active"><a href="/page/about">About</a></li>
+            <li><a href="/page/about">About</a></li>
             <li><a href="/page/team">Team</a></li>
-            <li><a href="/page/photo-tips">Photo Tips</a></li>
-            <li><a href="/page/faq">FAQ</a></li>
+            <li class="active"><a href="/page/photo-tips">Photo Tips</a></li>
+            <li><a href="http://www.mysaletable.tumblr.com/">Blog</a>
+            <li><a href="/page/faq-shoppers">FAQ</a></li>
             <li><a href="/contact">Contact</a></li>
             <li class="nav-header">Legal Stuff</li>
             <li><a href="/page/privacy">Privacy Policy</a></li>
@@ -22,7 +23,7 @@
 
       <div class="faq-nav">
         <div class="well  well-small center">
-          <a href="#"><font size="5">PHOTO TIPS: Best Practices </font></a>
+          <a href="#"><font size="5">PHOTO TIPS: Our Simple Guide for Best Practices </font></a>
 
 
         </div><!-- end well -->
@@ -31,45 +32,43 @@
 
 
       <div class="page-header">
-        <h4><span class="badge badge-success photo-tips">1</span>  Load Up to (3) Photos</h4>
+        <h4><span class="badge badge-success photo-tips">1</span>  Load (3) Photos</h4>
         <ul>
-          <li>One full length photo: on a hanger or yourself with a frame of space.</li> 
-          <li>One detailed shot: if there’s a logo, detail, or pattern, show it.</li>
-          <li>One price tag close up.</li>
+          <li>(1) Full length photo with space framing the product.</li> 
+          <li>(1) Detailed shot - if there’s a logo, detail, or pattern, show it!</li>
+          <li>(1) Price tag close-up.</li>
         </ul>
         <img src="/assets/tips1.jpg" height="200px" width="200px">
         <img src="/assets/tips2.jpg" height="200px" width="200px">
         <img src="/assets/tips3.jpg" height="200px" width="200px">
       </div>
       <div class="page-header">
-        <h4><span class="badge badge-success photo-tips">2</span>  Lighting Matters </h4>
+        <h4><span class="badge badge-success photo-tips">2</span>Lighting Matters </h4>
 
         <ul>
-          <li>Select the auto setting on your device's camera</li> 
+          <li>Select the auto setting on your camera.</li> 
         </ul>
       </div>
       <div class="page-header">
-        <h4><span class="badge badge-success photo-tips">3</span>  Style Matters </h4>
+        <h4><span class="badge badge-success photo-tips">3</span>Background</h4>
 
         <ul>
+          <li>Allow a frame of space around the product in your full length shot.</li>           
           <li>Avoid distracting backgrounds.</li> 
-          <li>Avoid reflective surfaces (mirror, glass metal, etc.)</li>
+          <li>Avoid reflective surfaces, such as mirror, glass, and metal.</li>
         </ul>
       </div>
       <div class="page-header">
         <h4><span class="badge badge-success photo-tips">4</span>  Location, Location, Location </h4>
 
         <ul>
-          <li>Allow MySaleTable to use your phone’s GPS, so it’s easy to select the store where you're posting.</li> 
+          <li>Be sure to let our app use your location and it will help find the store.</li> 
         </ul>
       </div>
       <div class="page-header">
-        <h4><span class="badge badge-success photo-tips">5</span>  Good, Clean Shopping Fun </h4>
+        <h4><span class="badge badge-success photo-tips">5</span>Pretty Photos, Please! :)</h4>
 
         <ul>
-          <li>If a photo may offend, rethink your post.</li> 
+          <li>Help sell your products with pretty, well-lit photos.</li> 
         </ul>
       </div>
-    </div>
-
-
