--- a/lib/static_pages/merchant-modal.html
+++ b/lib/static_pages/merchant-modal.html
@@ -1,11 +1,12 @@
+
 <div id="MerchantModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header"><br>
     <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><center><a href="index.html"><font size="5" color="#432060" class="modal-brand">Hello!</font></a></center>
     <p id="myModalLabel"></p>
   </div>
   <div class="modal-body">
-    <p>Thanks for stopping by. We're excited to launch very soon.</p><p> Take a look around, <a href="/pages/upload"><b>post</b></a> your store sales items through the website or <a href="/download"><b>download our iPhone app</b></a> .</p><p> Send us an <a href="mailto:shop@mysaletable.com"><b>email</b></a> if you have any questions or comments. We'd love to hear from you.</p>
-    </p><p>- The MySaleTable Team</p>
+    heyyyyyyyyyyyyyy
+	</div>
   </div>
   <div class="modal-footer">
     <button class="btn btn-success" data-dismiss="modal">Ok</button>
