--- a/lib/static_pages/curated-landing.html
+++ b/lib/static_pages/curated-landing.html
@@ -3,49 +3,46 @@
     <!-- Carousel
         ================================================== -->
 
-    <div class="banner">
-      <div class="item">
-        <a href="/sales"><img src="https://mst-images-shared.s3.amazonaws.com/lead_art_2.png" alt=""></a>
+    
+      <div class="item-front">
+        <a href="/sales"><img src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_Lead.png" alt=""></a>
 
       </div>
 
-    </div><!-- /.carousel -->
+   
     <br><br>
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
-    <div class="featurette-pics">
-      <div class="hot-spot">
-        <ul class="thumbnails">
-          <li class="span3">
-          <img class="product-pic img-polaroid" src="https://mst-images-shared.s3.amazonaws.com/Green_small.png" alt=""></a>
-
-        </li>
-        <li class="span3">
-        <a href="#"><img class="product-pic img-polaroid" src="https://mst-images-shared.s3.amazonaws.com/horse_logo.png" alt=""></a>
-
-        </li>
-        <li class="span3">
-        <a href="#"><img class="product-pic img-polaroid" src="https://mst-images-shared.s3.amazonaws.com/dash_logo.png" alt=""></a>
-
-        </li>
-      </ul>
+    
+ <div class="row-fluid">
+				<div class="container">
+					<table cellpadding="0" cellspacing="0" width="968">
+						<tbody>
+							<tr>
+								<td align="left" width="33%">
+									<a href="/featured/new-stuff"><img alt="" border="0" src="https://s3.amazonaws.com/mst-images-shared/Yahoo_Steins.png" style="margin-left:38px;"></a></td>
+								<td align="center" width="33%">
+									<a href="/featured/new-stuff"><img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_2.png" style="margin-left: 35px"></a></td>
+								<td align="right" width="33%">
+									<a href="/featured/new-stuff"><img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_3.png" style="margin-right: -10px;"></a></td>
+							</tr>
+						</tbody>
+					</table>
     </div>
 
   </div>
-  <hr class="featurette-divider">
 
-  <div class="asfeatured">
-    <p>JOIN US</p>
+ <br> <br>
 
-  </div>
 
-  <table class="press-pass">  
-    <td><a href="http://www.pinterst.com/mysaletable"><img src="https://mst-images-shared.s3.amazonaws.com/pinterestlogo.png"></a></td>
-    <td><a href="http://www.twitter.com/mysaletable"><img src="https://mst-images-shared.s3.amazonaws.com/tbird.png"></a></td>
-    <td><a href="http://www.facebook.com/mysaletable"><img src="https://mst-images-shared.s3.amazonaws.com/fb_logo.png"></a></td>
-    <td><a href="http://www.instagram.com/mysaletable"><img src="https://mst-images-shared.s3.amazonaws.com/instagram.png"></a></td>
 
-  </table>
 
+<table class="press-pass-two social-text">  
+<td> <large>Join Us</large></a></td>
+<td></td>	
+    <td><a href="http://www.twitter.com/valydation"><img src="/assets/twitter_32_icon.png"></a></td>
+    <td><a href="http://www.facebook.com/valydation"><img src="/assets/facebook_icon_32.png"></a></td>
+    <td><a href="http://www.instagram.com/valydation"><img src="/assets/instagram_32.png"></a></td>
+
+  </table></div></div>
