--- a/lib/static_pages/curated-landing.html
+++ b/lib/static_pages/curated-landing.html
@@ -1,48 +1,100 @@
-<div class="container">
-  <div class="marketing-template">
-    <!-- Carousel
-        ================================================== -->
+<!-- INTRO-->
+    <!--===============================================================-->
+    <div class="bg-intro" id="home">
+      <div class="layer-intro">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <img style="width:100%;" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_Lead.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="arrow-down"></div>
 
-    
-      <div class="item-front">
-        <a href="/sales"><img src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_Lead.png" alt=""></a>
+    <!-- PORTFOLIO-->
+    <!--===============================================================-->
+    <div class="bg-portfolio" id="portfolio">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="title">LATEST WORK</h2>
+            <hr>
+          </div>
+        </div>
+
+        <div class="row row-portfolio">
+          <div class="col-sm-4 margin-bottom-xs">
+              <img alt="" border="0" src="https://s3.amazonaws.com/mst-images-shared/Yahoo_Steins.png">
+          </div>
+          <div class="col-sm-4 margin-bottom-xs">
+              <img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_2.png">
+          </div>
+          <div class="col-sm-4">
+              <img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_3.png">
+          </div>
+        </div>
 
       </div>
-
-   
-    <br><br>
-
-    <!-- START THE FEATURETTES -->
-
-    
- <div class="row-fluid">
-				<div class="container">
-					<table cellpadding="0" cellspacing="0" width="968">
-						<tbody>
-							<tr>
-								<td align="left" width="33%">
-									<a href="/featured/new-stuff"><img alt="" border="0" src="https://s3.amazonaws.com/mst-images-shared/Yahoo_Steins.png" style="margin-left:38px;"></a></td>
-								<td align="center" width="33%">
-									<a href="/featured/new-stuff"><img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_2.png" style="margin-left: 35px"></a></td>
-								<td align="right" width="33%">
-									<a href="/featured/new-stuff"><img alt="" src="https://s3.amazonaws.com/mst-images-shared/Landing_Box_3.png" style="margin-right: -10px;"></a></td>
-							</tr>
-						</tbody>
-					</table>
     </div>
 
-  </div>
+    <!-- SKILLS-->
+    <!--===============================================================-->
+    <!-- <div class="bg-skills" id="skills">
+      <div class="container">
 
- <br> <br>
+        <div class="row">
+          <div class="col-sm-6 margin-bottom-xs">
+            <h2>MY SKILLS</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque metus at metus tristique tincidunt. <br>Quisque luctus aliquam dolor et consectetur. Nullam viverra diam sed dignissim congue. Aenean eget mauris quis eros convallis ornare. Fusce sed erat purus. Nam egestas venenatis elit eget cursus.
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <h4>Adobe Illustrator</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+            <h4>Photoshop</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+            <h4>HTML5 - CSS3</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+            <h4>Javascript</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                <span class="sr-only"></span>
+              </div>
+            </div>
+          </div>
+        </div>
 
+      </div>
+    </div>
 
+   
 
-
-<table class="press-pass-two social-text">  
-<td> <large>Join Us</large></a></td>
-<td></td>	
-    <td><a href="http://www.twitter.com/valydation"><img src="/assets/twitter_32_icon.png"></a></td>
-    <td><a href="http://www.facebook.com/valydation"><img src="/assets/facebook_icon_32.png"></a></td>
-    <td><a href="http://www.instagram.com/valydation"><img src="/assets/instagram_32.png"></a></td>
-
-  </table></div></div>
+    <!-- CONTACT-->
+    <!--===============================================================-->
+    <div class="bg-contact" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h3>Feel free to contact us with inquiries</h3>
+              <!-- YOUR E-MAIL-->
+            <a href="mailto:hi@valydation.com" class="mail"><span class="glyphicon glyphicon-envelope"></span>E-MAIL</a>
+          </div>
+        </div>
+      </div>
+    </div>
